apigate/tests/ui/fail/map_output_not_serialize.stderr
error[E0277]: the trait bound `NotSerialize: serde::Serialize` is not satisfied
  --> tests/ui/fail/map_output_not_serialize.rs:20:1
   |
20 | #[apigate::service(name = "svc", prefix = "/svc")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Serialize` is not implemented for `NotSerialize`
  --> tests/ui/fail/map_output_not_serialize.rs:11:1
   |
11 | struct NotSerialize {
   | ^^^^^^^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `NotSerialize` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `&'__apigate_m Finisher<apigate::__private::Json, NotSerialize>` to implement `for<'__apigate_m> Finish<apigate::__private::Json, NotSerialize>`
note: required by a bound in `bad`
  --> tests/ui/fail/map_output_not_serialize.rs:15:1
   |
15 | #[apigate::map]
   | ^^^^^^^^^^^^^^^ required by this bound in `bad`
16 | async fn bad(input: Input) -> MapResult<NotSerialize> {
   |          --- required by a bound in this function
   = note: this error originates in the attribute macro `apigate::service` which comes from the expansion of the attribute macro `apigate::map` (in Nightly builds, run with -Z macro-backtrace for more info)
